--- a/config.dev.yml
+++ b/config.dev.yml
@@ -1,20 +1,19 @@
 version: 0.1
 
 logging:
-    level: 'debug'
-    formatter: 'text'
+  level: 'debug'
+  formatter: 'text'
 
 mockapi:
-    addr: 'localhost:9090'
-
-api:
-    addr: 'localhost:9090'
+  addr: 'localhost:9090'
 
 tracking:
-    tracking_label: 'com.example.track'
-    key_label: 'com.example.track'
+  tracking_label: 'com.example.track'
+  key_label: 'com.example.track'
 
 collector:
-    rate: 1800
+  rate: 1800
+
+reporter: 'mock'
 
 containers: 'embedded'
