--- a/config.dev.yml
+++ b/config.dev.yml
@@ -14,6 +14,14 @@ tracking:
 collector:
   rate: 1800
 
+# The reporting driver and driver parameters
+# parameterless form
 reporting: 'mock'
+
+# with driver parameters
+#reporting:
+#  mock:
+#    parameter1: 'foo'
+
 
 containers: 'embedded'
