add ctoll reporter codepath

--- a/config.dev.yml
+++ b/config.dev.yml
@@ -13,10 +13,12 @@ tracking:
 collector:
   rate: 1800
 
-reporting: 'mock'
-#reporting:
-#  cmeterapi:
-#    addr: 'localhost:9090'
+#reporting: 'mock'
+reporting:
+  ctoll:
+    # Acme Org API key from cToll seed
+    apikey: '2390511a-870d-11e6-ae22-56b6b6499611'
+    endpoint: 'localhost:9090'
 #  http:
 #    url: 'http://example.org/events'
 #    method: 'POST'
