--- a/config.dev.yml
+++ b/config.dev.yml
@@ -15,16 +15,12 @@ collector:
 
 #reporting: 'mock'
 reporting:
-  ctoll:
-    # Acme Org API key from cToll seed
-    apikey: '2390511a-870d-11e6-ae22-56b6b6499611'
-    endpoint: 'http://localhost:9180'
-#  http:
-#    url: 'http://example.org/events'
-#    method: 'POST'
-#    receipt_header: 'X-CMETER-RECEIPT'
-#    headers:
-#      x-user-header-1: 'foo'
-#      x-user-header-2: 'boo'
+  http:
+    url: 'http://example.org/events'
+    method: 'POST'
+    receipt_header: 'X-CMETER-RECEIPT'
+    headers:
+      x-user-header-1: 'foo'
+      x-user-header-2: 'boo'
 
 containers: 'embedded'
